WIP: projects overview with github api
from shopify
needs css, look in the cards sass and figure the rest out

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,9 @@
 <footer class="site-footer">
 </footer>
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+<script src="{{ "/js/libs/modernizr.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/libs/handlebars.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/libs/isotope.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/custom-repos.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/shopify-opensource.js" | prepend: site.baseurl }}"></script>
 <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
