--- a/_includes/open_graph.html
+++ b/_includes/open_graph.html
@@ -3,4 +3,4 @@
 <meta name="twitter:creator" content="{% if page.twitter %}{{page.twitter}}{% else %}@codeformuenster{% endif %}" />
 <meta property="og:url" content="{{page.url | prepend: site.baseurl | prepend: site.url | prepend: "http://"}}" />
 <meta property="og:title" content="{{page.title}}" />
-<meta property="og:description" content="{{page.excerpt | xml_escape | textilize}}" />
+<meta property="og:description" content="{{page.excerpt | strip_html }}" />
