CSS Verbesserungen und Vereinheitlichung für Projekte, Blogs

--- a/_includes/meetup.html
+++ b/_includes/meetup.html
@@ -1,9 +1,9 @@
 <div id="next-meetup">
   <div id="date">
-    <h4>Nächstes Treffen: <span></span>
+    <h4>Nächstes Treffen: <span></span></h4>
     <div id="meetup-details">
       <h5 id="title"><em>lade Daten</em></h5>
-      <h6 id="venue"></h6>
+      <h5 id="venue"></h5>
       <p id="description"></p>
       <div id="rvsp-button">
         <a href="http://www.meetup.com/OK-Lab-Munster" id="rvsp">Ich bin dabei!</a>
