--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -15,6 +15,13 @@ $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
+$cfde-lightgray:   #f2f2f2;
+$cfde-red:         #ff5449;
+$cfde-green:       #22d790;
+$cfde-blue:        #00abfa;
+
+$navigation-height: 90px;
+
 $on-palm:          600px;
 $on-laptop:        800px;
 
