--- a/_sass/_main.sass
+++ b/_sass/_main.sass
@@ -1,63 +1,64 @@
+.wrapper
+  @include span-columns(10)
+  padding: 25px
 a
   color: #fff
+  text-decoration: underline
+  &:hover
+    color: #eee
+a.falink
+  text-decoration: none
 ul
   margin: 0 0 1.5em
 p
   margin: 0 0 1.5em
-#background-pic
-  position: fixed
-  top: 0
-  left: 0
-  height: 100%
-  width: 100%
-  background: url(/img/prinzipalmarkt15-grau.jpg)
-  background-size: cover
-  background-position: right
-  z-index: -1
 .page-content
-  padding-top: 100px
-  @include outer-container()
-.wrapper
-  @include span-columns(10)
-  margin-top: 2em
+  padding-top: $navigation-height
+  width: 100%
 #main
-  h1
-    color: white
-    font-size: 90px
-    letter-spacing: 1px
-    text-shadow: 2px 2px 5px black
-    padding-top: 0px
-    padding-bottom: 0
-    margin-bottom: 0
-    @media screen and (max-width: 1200px)
-      font-size: 70px
-      line-height: 80px
-    @media screen and (max-width: 900px)
-      font-size: 40px
-      line-height: 50px
-    @media screen and (max-width: 480px)
-      text-align: left
-      font-size: 35px
-      line-height: 60px
-  h3
-    color: white
-    text-shadow: 2px 2px 5px black
-    font-size: 40px
-    letter-spacing: 4px
-    text-transform: uppercase
-    margin-top: 0px
-    padding-top: 0
-    font-weight: bold
   .more-info
     @include row()
-    @include span-columns(10)
   p
-    text-align: center
+    text-align: left
+  .wrapper
+    max-width: 100%
+    .more-info 
+      p
+        text-align: center
+  #main-meetup
+    background: url(/img/prinzipalmarkt15-grau.jpg)
+    background-size: cover
+    background-position: right
+    background-color: black
+  #main-codeadifference
+    background-color: $cfde-lightgray
+    color: $cfde-blue
+    font-size: 130%
+    padding: 50px
+    h1
+      background-color: $cfde-red
+      color: white
+      display: inline-block
+      padding: 0px 5px
+    h3
+      margin-left: 30px
+  #main-aboutus
+    background-color: $cfde-green
+    color: white
+  #main-blog
+    background-color: $cfde-blue
+    color: white
+    ul
+      li
+        font-size: 125%
+        a
+          text-decoration: none
+  p#fotocopyright
+    text-align: right
+    font-size: 80%
+    margin-bottom: -25px
+    color: white
 #about-us
   background: rgba(3,3,3,0.8)
   padding: 1em
   color: #fff
-  a
-    color: #89A8F9
-    &:hover
-      color: #477DCA
