--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -9,9 +9,9 @@ header.navigation
     text-decoration: none
   //////////////////////////////////////////////////////////////////////////////////
   $navigation-padding: 1em
-  $navigation-background: rgba(255, 255, 255, 0.8)
+  $navigation-background: rgba(255, 255, 255, 0.95)
   $navigation-color: black
-  $navigation-color-hover: white
+  $navigation-color-hover: #666
   $navigation-height: 90px
   $navigation-nav-button-background: $base-accent-color
   $navigation-nav-button-background-hover: lighten($navigation-background, 10%)
