"Mitmachen" neue Seite

--- a/_sass/_blog.sass
+++ b/_sass/_blog.sass
@@ -18,7 +18,7 @@
       padding: 20px
       li
         color: #444
-        padding: 10px
+        padding: 1em
         background: white
         font-size: 15px
         margin-bottom: 20px
@@ -35,7 +35,7 @@
     padding: 20px 40px
     text-shadow: none
     color: #444
-    margin: 0.8em 0
+    margin: 1em 0
     h1, h2, h3
       margin: 0.75em 0
       color: #323232
